2007-08-01  Michael Snyder  <msnyder@access-company.com>

	* tui/tui-data.c (tui_alloc_content): Move assign out of if, 
	clean up long lines.
	(tui_alloc_generic_win_info): Tidy by using XMALLOC macro.
	(tui_alloc_win_info): Ditto.
	(tui_add_content_elements): Ditto.
	* tui/tui-file.c (tui_file_magic): Ditto.

2007-07-31  Michael Snyder  <msnyder@access-company.com>

	* breakpoint.c (breakpoint_init_inferior): Add 'else' to 'if'.
	True and false paths are mutually exclusive.

	* event-top.c (command_line_handler): Add pedantic return.

	* f-valprint.c (info_common_command): Bail out to prevent null
	pointer deref.  Break up a long line.

	* exec.c (xfer_memory): Remove redundant condition from 'if'.

	* symfile.c (reread_separate_symbols): Free xmalloced memory.

	* printcmd.c (build_address_symbolic): Remove dead code and dead 
	variable.

2007-07-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* linespec.c (minsym_found): Advance to the next line if possible.

2007-07-31  Pedro Alves  <pedro_alves@portugalmail.pt>

	* arm-wince-tdep.c (arm_wince_init_abi): Remove svr4 related call.
	* config/arm/wince.mt (TDEPFILES): Remove solib-legacy.o and
	solib-svr4.o, and add solib-target.o

2007-07-27  Michael Snyder  <msnyder@access-company.com>

	* tui/tui-data.c (tui_alloc_generic_win_info): Wrong arg for sizeof.

2007-07-26  Maciej W. Rozycki  <macro@linux-mips.org>

	* MAINTAINERS (Write After Approval): Add myself.

2007-07-26  Maciej W. Rozycki  <macro@mips.com>

	* Makefile.in (MAKEHTMLFLAGS): Also search the current directory
	for include files.

2007-07-25  Maciej W. Rozycki  <macro@mips.com>

	* Makefile.in (MAKEHTMLFLAGS): Remove "-glossary".

2007-07-24  Michael Snyder  <msnyder@access-company.com>

	* solib-svr4.c (svr4_fetch_objfile_link_map): Null pointer check of
	'buffer' must cover both branches that call strcmp (Coverity).

	* stack.c (print_frame_args): Check return value of lookup_symbol.

	* ax-gdb.c (find_field): Guard against null ptr.
